--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -106,7 +106,7 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">About</div>
 				<div class="public_p pl-30">
         <p>
-          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineering and Maejo University (Thailand),
+          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineerin and Maejo University (Thailand),
 					will be held in Bangkok, Thailand during December 26-28, 2019. ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 					The conference certification will be issued to all attendees including listeners. 
 					<br/>
@@ -130,6 +130,7 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">News</div>
 				<div class="public_p pl-30">
         <ul>
+					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
 					<li><a href="/submit" target="_blank" style="color: #102cf7"><u>Onilne Registration System is open to November 20, 2019</u></a></li>
 					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
           <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
@@ -175,7 +176,8 @@ var _hmt = _hmt || [];
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
-            <p>Asia-Pacific Association of Natural Science and Engineering</p>
+            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
+						Maejo University (Co-organizer)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
@@ -205,8 +207,8 @@ var _hmt = _hmt || [];
       <!--li><img src="../img/3--cnki-logo.gif"/></li>
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
       <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
-      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li>
-			<li><img src="../img/7--IOP.png"/></li-->
+      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
+			<li><img src="../img/7--IOP.png"/></li>
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
