--- a/src/main/resources/templates/page/en/program.html
+++ b/src/main/resources/templates/page/en/program.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -83,90 +83,10 @@ var _hmt = _hmt || [];
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Program</div>
       <div class="public_p pb-20 pl-30">
-        <table border="1" cellpadding="0" cellspacing="0" style="width:100.0%;" width="100%">
-          <tbody>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px" colspan="2">Dec. 26, 2019 Thursday ---- Check-in (Lobby of the hotel)</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px;  padding-left: 20px;">15:00-17:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Check-in and On-site Registration</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">Dec. 27, 2019 Friday ---- Conference Day (Conference Room: Murano Room)</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">8:00-8:40</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Check-in and On-site Registration</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">8:40-9:00</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Openning Ceremony</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Opening Speeches</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">9:00-10:20</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Plenary Speech</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Invited Speech 1</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:20-10:50</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Group Photo & Coffee Break & Poster Session</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">10:50-11:50</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Invited Speech 2</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">Invited Speech 3</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">12:00-13:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Lunch & Poster Session</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">13:30-17:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Oral Presentation (15:30-15:50 Tea Break & Poster Session)</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">Dec. 28, 2019 Saturday ---- Conference Day (Conference Room: Murano Room)</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">8:30-10:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Oral Presentatio</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:00-10:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Tea Break & Poster Session</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:30-12:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Oral Presentatio</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">12:00-13:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Lunch & Poster Session</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">13:30-17:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Oral Presentatio (15:30-15:50 Tea Break & Poster Session)</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">17:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">Closing Ceremony</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">Dec. 29, 2019 Sunday ---- Academic Visit</th>
-          </tr>
-
-
-          </tbody>
-        </table>&nbsp;<br/>&nbsp;
-      </div>
+      <li><img src="../img/program__1.png" height="1100px"></li>
+			<li><img src="../img/program__2.png" height="1100px"></li>
+			<li><img src="../img/program__3.png" height="1100px"></li>
+			</div>
 
     </div>
 
@@ -192,7 +112,8 @@ var _hmt = _hmt || [];
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
-            <p>Asia-Pacific Association of Natural Science and Engineering</p>
+            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
+						Maejo University (Co-organizer)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
