--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -84,8 +84,8 @@ var _hmt = _hmt || [];
       <div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">Organizers</div>
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
-          <strong>Asia-Pacific Association on Natural Science and Engineering<br/>
-					</strong>
+          <strong>Asia-Pacific Association on Natural Science and Engineering<br/></strong>
+					<strong>Maejo University (Thailand)</strong>--Co-organizer
         </p>
       </div>
 
@@ -159,8 +159,8 @@ var _hmt = _hmt || [];
         <!--li><img src="../img/3--cnki-logo.gif"/></li>
         <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
         <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
-        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li>
-				<li><img src="../img/7--IOP.png"/></li-->
+        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
+				<li><img src="../img/7--IOP.png"/></li>
 				<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
@@ -195,7 +195,8 @@ var _hmt = _hmt || [];
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
-            <p>Asia-Pacific Association of Natural Science and Engineering</p>
+            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
+						Maejo University (Co-organizer)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
