--- a/src/main/resources/templates/page/en/proposal.html
+++ b/src/main/resources/templates/page/en/proposal.html
@@ -15,28 +15,28 @@ var _hmt = _hmt || [];
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
-  <title>ICABST Submission|Submit--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedicalsubmission,submit,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
+  <title>About ICABST|Intorduction--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
+  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedical,About,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/public.css" />
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/style.css"/>
   <link rel="stylesheet" href="../css/main-zh.css"/>
   <link rel="stylesheet" href="../css/global.css"/>
   <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
-  <script type="text/javascript" src="../js/xadmin.js"></script>
+  <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../js/js.js" ></script>
 </head>
 <body>
 <div class="width-100 all_bg">
   <!--header star-->
   <div class="header">
+
 
 
     <header class="img">
@@ -74,61 +74,40 @@ var _hmt = _hmt || [];
     </ul>
   </div>
   
-</div>
-<!--header end-->
+  </div>
+  <!--header end-->
 
-<div class="w-1200 bg_white pt-30">
+  <div class="w-1200 bg_white pt-30">
 
     <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
       <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Submission Guideline</div>
         <div class="public_p pb-20 pl-30">
-					<p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing about 300-350 words.</p>
-					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
-					<p>3. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System</strong></u></a>. All required information is needed to finish the registration.</p>
-					<p>4. Or download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
-					<p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
-					<p>6. All accepted abstracts will be printed in Conference Program and Abstract Book.</p>
-					<p>7. Please click to download the <a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u><strong>"Abstract Templete"</strong></u></a>.</p>
-				</div>
-
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Presentation Type</div>
-        <div class="public_p pb-20 pl-30">
-          <p>
-            <strong>Oral Presentation</strong>: Presenters will have 20-25 min (usually 17-20 min for presentation, 3-5 min for questions and answers). 
-          	Speakers are requested to submit a Power Point presentation, if any, one day before the allotted time.
-          </p>
-          <p>
-            <strong>Poster Presentation</strong>: Posters will be displayed as a portrait of A1 (594mm width ×841mm length) size. 
-          	Presenters are requested to make the poster by themselves <a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank" style="color: #102cf7"><u>(Poster Templete)</u></a> and hand it to conference secretary while check-in.
-						Presenter is required to stand by his/her poster. All presenters are responsible for removing their posters after presentation time.
-          </p>
-          <p>
-            <strong>Listeners</strong> do not need to submit any document but to finish the submission information.
-					</p>
-        </div>
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Reviewing & Publishing Policies</div>
-        <div class="public_p pb-20 pl-30">
-          <p>
-						<strong>1. Editorial Policy</strong>
-						As for Abstracts only presented at the conference, the submission can be previously published or presented at other conferences.
-						As for Full Paper publish in Journals, you must admit that the submission is completely original and has not been previously published nor presented.
-					</p>
+					<div class="text-center">
+					<p><strong>
+					  Call for Proposal of ICABST2020
+						</strong></p>
+					</div>
 					<p>
-						<strong>2. Copyright</strong>
-						Copyright License Agreement provided by publisher will be signed when the paper is accepted.
-					</p>
+						 ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
+						 The proposal deadline is the February 15, 2020. If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.
+						 </p>
 					<p>
-						<strong>3. Peer-Review</strong>
-						All abstracts/full papers will be sent for peer review by two or more experts in related fields, and the decision will return in about 7-10/15-20 working days. Possible decisions on a manuscript are: acception, revision (minor or major), rejection.
-					</p>
+						Description of a Co-organizer:<br/>
+						1. Help to announce the conference information on institution email and social platform;<br/>
+						2. Provide academic support such as to create scientific program and/or recommend potential speakers; (optional)<br/>
+						3. Help to provide visa-support invitations to participants; (optional)<br/>
+						4. Circulate the conference information, advertise and promote the conference in scientific platform.<br/>
+						</p>
 					<p>
-							<strong>4. Publication Ethics</strong>
-							We firmly believe that ethical conduct is the most essential virtual of any academic. Hence any act of plagiarism is a totally unacceptable academic misconduct and cannot be tolerated.
-					</p>
-        </div>
+						Benefits:<br/>
+						1. Have the opportunity to attend conference for free<br/>
+						2. To be one of the conference committee members/session chair (co-chair)<br/>
+						3. 1 page free Ad or a paper in conference proceedings<br/>
+						<br/>
+						For related issues, please contact info@apanse.com<br/>
+						</p>
       </div>
-
+			
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
@@ -145,7 +124,7 @@ var _hmt = _hmt || [];
             <p>Abstract Deadline: Nov. 20, 2019</p>
 						<p>Reg. Deadline: Nov. 30, 2019</p>
 						<p>Acceptance: 7-10 working days</p>
-						<p>Conf. Date: Dec. 26-28, 2019</p>
+						<p>Conf. Date: December 26-28, 2019</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
@@ -183,6 +162,7 @@ var _hmt = _hmt || [];
 </footer>
 
 
+
 </div>
 
 <script>
@@ -202,5 +182,3 @@ var _hmt = _hmt || [];
 
 </body>
 </html>
-
-
