--- a/src/main/resources/templates/page/en/registration.html
+++ b/src/main/resources/templates/page/en/registration.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -193,7 +193,8 @@ var _hmt = _hmt || [];
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
-            <p>Asia-Pacific Association of Natural Science and Engineering</p>
+            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
+						Maejo University (Co-organizer)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
