修改细节内容

--- a/src/main/resources/templates/page/cn/proposal.html
+++ b/src/main/resources/templates/page/cn/proposal.html
@@ -14,7 +14,7 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-  <title>ICABST2019成功召开| 2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST2020合办申请| 2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
 	<meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
   <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
 	<meta name="robots" content="index,follow" />
@@ -82,29 +82,35 @@ var _hmt = _hmt || [];
         <div class="public_p pb-20 pl-30">
 					<div class="text-center">
 					<p><strong>
-					  Call for Proposal of ICABST2020
-						</strong></p>
+					  ICABST2020 申请合办通知
+						</strong><br/><br/></p>
 					</div>
 					<p>
-						 ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
-						 The proposal deadline is the February 15, 2020. If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.
-						 </p>
-					<p>
-						Description of a Co-organizer:<br/>
-						1. Help to announce the conference information on institution email and social platform;<br/>
-						2. Provide academic support such as to create scientific program and/or recommend potential speakers; (optional)<br/>
-						3. Help to provide visa-support invitations to participants; (optional)<br/>
-						4. Circulate the conference information, advertise and promote the conference in scientific platform.<br/>
+						 ICABSTS2019于2019年12月26-28日在泰国曼谷成功召开。现ICABST2020正在紧张筹备中，现面向社会各界个人、团体、高校或研究机构开启合办申请。有意向参与合办的个人或机构请及时联系组委会。ICABST2020合办申请将于2020年2月15日截止。
+						<br/><br/>
 						</p>
-					<p>
-						Benefits:<br/>
-						1. Have the opportunity to attend conference for free<br/>
-						2. To be one of the conference committee members/session chair (co-chair)<br/>
-						3. 1 page free Ad or a paper in conference proceedings<br/>
+					<p><strong>
+						合办方义务：</strong><br/>
+						1. 作为合办方，需帮助转发会议通知，并将会议信息发布至单位媒体平台<br/>
+						2. 提供必要的学术支持，如安排会议日程，推荐主讲人等（可选）<br/>
+						3. 为需要帮助办理签证的参会者提供相应的支持（可选）<br/>
+						4. 选定会议地址和时间，提供交通或住宿上的便利和优惠（可选）<br/>
+						5. 如选定合办方单位地址举行会议，则需提供志愿者在会场提供帮助<br/><br/>
+						</p>
+					<p><strong>
+						合办方权利：</strong><br/>
+						1. 提供三个免费参会名额<br/>
+						2. 可推荐1-2名学者委任大会主席/副主席/名誉主席<br/>
+						3. 在会议指南/材料中将会安排单独的宣传页可供以自由填充内容<br/>
+						4. 会议产生的所有合理费用都将由"亚太自然科学与工程协会"(APANSE)独自承担<br/>
+						5. 大会组委会合作的SCI、EI期刊和会议出版物，可优先为合办单位的投稿进行安排<br/>
+						6. 所有来自合办单位的参会人员、投稿均可享有特殊优惠<br/>
 						<br/>
-						For related issues, please contact info@apanse.com<br/>
+						更多详情，请联系info@apanse.com<br/>
+						<br/><br/><br/><br/>
 						</p>
       </div>
+		</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
@@ -141,12 +147,8 @@ var _hmt = _hmt || [];
             <p>微信公众号：APANSE</p>
         </ul>
     </div>
-      
       <div class="clear"></div>
-
-
     </div>
-
   </div>
 
 <!--footer-->
@@ -158,8 +160,6 @@ var _hmt = _hmt || [];
 		</p>
   </div>
 </footer>
-
-</div>
 
 <script>
 (function(){
