--- a/src/main/resources/templates/page/cn/achieve.html
+++ b/src/main/resources/templates/page/cn/achieve.html
@@ -83,40 +83,37 @@ var _hmt = _hmt || [];
 					<div class="text-center">
 					<p><strong>
 					  ICABST2019成功在泰国曼谷召开
-						</strong></p>
+						</strong><br/><br/></p>
 					</div>
 					<p>
-						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。
-						 </p>
-					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。
+						<br/><br/>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在大会开幕式中，来自特拉维夫大学（Tel-Aviv University）的Gil Navon教授、哈佛医学院Hadi Shafiee教授作为大会主席为会议致词。
 						二位会议主席在欢迎词中简单介绍了APANSE协会，同时热烈欢迎来自世界各地的学者参加本届学术会议；同时，Gil Navon教授就2020年ICABST的合作做了简短报告。本届会议共有来自16个国家的学者参加，邀请了若干领域内杰出影响的专家做了大会报告，与会者深入广泛的讨论了相关议题。
-						</p>
-					<p>
-						本届会议持续两天，包括邀请报告、口头报告和张贴报告。作为邀请报告的报告人，Gil Navon教授拥有超过一万次数的引用，其H指数高达52；哈佛医学院Hadi Shafiee教授，作为部门负责人，具有丰富的教学、科研、及临床经验；同时，来自韩国哈利姆大学的Taisun Kim教授，兼任全球著名生物研究型企业Biometrix Technology Inc.的CEO，也做了重要报告。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议持续两天，包括邀请报告、口头报告和张贴报告。作为邀请报告的报告人，Gil Navon教授拥有超过一万次数的引用，其H指数高达52；哈佛医学院Hadi Shafiee教授，作为部门负责人，具有丰富的教学、科研、及临床经验；同时，来自韩国哈利姆大学的Taisun Kim教授，兼任全球著名生物研究型企业Biometrix Technology Inc.的CEO，也做了重要报告。
 						在主讲报告后，玛希隆大学（Mahidol University）的Pornpun Vivithanaporn博士作为分会主持人，对三位主讲人的报告进行了高度评价并带领与会人员对于报告中所提出的研究热点进行了热烈的讨论。
-						</p>
-					<p>
-						会议结束后，大会组委会感谢每一位参会者的支持和参与，并为会议主讲人及优秀报告人颁发奖章，同时对泰国梅州大学（Maejo University）及玛希隆大学（Mahidol University）表达了诚挚的感谢。
-						</p>
-					<p>
-						ICABST为年度学术会议，且2020年的本会议正在紧张筹备中，欢迎来自各个国家和高校及研究机构的学者关注并参与。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;会议结束后，大会组委会感谢每一位参会者的支持和参与，并为会议主讲人及优秀报告人颁发奖章，同时对泰国梅州大学（Maejo University）及玛希隆大学（Mahidol University）表达了诚挚的感谢。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICABST为年度学术会议，且2020年的本会议正在紧张筹备中，欢迎来自各个国家和高校及研究机构的学者关注并参与。
 						同时，在此代表组委会和学术委员会，诚挚向社会各界发出合办邀请，如有单位、团体或个人有意向参与共同举办学术会议，可随时与我们取得联系。ICABST2020将在2月15日停止招收合办单位，请有意向的个人或团体尽早联系我方会务人员。
 						</p>
 						<ul>
 							<div class="text-center">
 							<li>
-								<img src="../img/O1.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="280px">
-								<img src="../img/O3.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="280px">
-								<img src="../img/O5.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="280px">
-								<img src="../img/O7.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="280px">
-								<img src="../img/O9.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="280px">
-								<img src="../img/C2.jpg" width="280px">
+								<img src="../img/O1.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="340px"><br/><br/>
+								<img src="../img/O3.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="340px"><br/><br/>
+								<img src="../img/O5.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="340px"><br/><br/>
+								<img src="../img/O7.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="340px"><br/><br/>
+								<img src="../img/O9.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="340px"><br/><br/>
+								<img src="../img/C2.jpg" width="340px"><br/><br/>
 							</li>
 							</div>
 							<div class="clear"></div>
 							</ul>
       </div>
+		</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
@@ -153,12 +150,8 @@ var _hmt = _hmt || [];
             <p>微信公众号：APANSE</p>
         </ul>
     </div>
-      
       <div class="clear"></div>
-
-
     </div>
-
   </div>
 
 <!--footer-->
@@ -170,8 +163,6 @@ var _hmt = _hmt || [];
 		</p>
   </div>
 </footer>
-
-</div>
 
 <script>
 (function(){
