--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -116,6 +116,8 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
+					<li><a href="/cn/proposal" target="_blank" style="color: #102cf7"><u>ICABST2020 申请合办通知</u></a></li>
+					<li><a href="/cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019已成功召开！</u></a></li>
 					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>点击下载会议指南(会议日程)</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
           <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
